feat: 🎸 edit article

--- a/articles/876149ba8a5183.md
+++ b/articles/876149ba8a5183.md
@@ -17,10 +17,6 @@ published_at: 2020-12-25
 
 読みたいところだけ上手いことつまみ食いしていただいたり、あとで参考にするためにブックマークだけでもしておいていただければ嬉しいです！
 
-ちなみに、同じ内容をZennの本としても公開しました。読みやすいほうで読んでいただければと思います👌
-
-[![](https://tva1.sinaimg.cn/large/0081Kckwgy1glzcq4m4lyj307109cmxm.jpg)](https://zenn.dev/ttskch/books/2fa3612c68c2d9)
-
 # はじめに
 
 僕は [今年の4月にベンチャー企業のCTOからフリーランスエンジニアにジョブチェンジしました](https://blog.ttskch.com/thank-you-quartet-communications/)。
@@ -45,27 +41,11 @@ published_at: 2020-12-25
 
 # 本編
 
-分量が多いので章ごとにページを分けてあります。
+分量が多いので本編はZennの本として公開してあります。
+
+[![](https://tva1.sinaimg.cn/large/0081Kckwgy1glzcq4m4lyj307109cmxm.jpg)](https://zenn.dev/ttskch/books/2fa3612c68c2d9)
 
 頭から順番に読んでいただいたり、見出しを見て興味がありそうなところを読んでいただいたり、適宜活用いただければと思います✋
-
-* [1. ttskch/symfony-skeletonで雛形を作成](/symfony-realworld-example-app-01)
-* [2. CI/CDを設定](/symfony-realworld-example-app-02)
-* [3. ユーザー認証周りの機能を一通り実装](/symfony-realworld-example-app-03)
-* [4. 安全なマイグレーションコマンドを作成（など）](/symfony-realworld-example-app-04)
-* [5. ユーザーのCRUDを実装](/symfony-realworld-example-app-05)
-* [6. ttskch/paginator-bundleで一覧画面にページネーションを導入](/symfony-realworld-example-app-06)
-* [7. TwigExtensionとUrlGenerator（など）を自作して面倒な処理を効率化](/symfony-realworld-example-app-07)
-* [8. プロフィール画面を実装](/symfony-realworld-example-app-08)
-* [9. ユーザー削除画面を実装](/symfony-realworld-example-app-09)
-* [10. Security Voterを使ってユーザー編集・削除の権限を整理](/symfony-realworld-example-app-10)
-* [11. ユーザー系画面の機能テストを作成](/symfony-realworld-example-app-11)
-* [12. サービスクラスを作成したらユニットテストを書く](/symfony-realworld-example-app-12)
-* [13. エンティティを作成](/symfony-realworld-example-app-13)
-* [14. CRUDを実装](/symfony-realworld-example-app-14)
-* [15. 機能テストを作成](/symfony-realworld-example-app-15)
-* [16. エンティティの数だけ13〜15を繰り返し](/symfony-realworld-example-app-16)
-* [17. 一覧画面に検索と一括削除を実装](/symfony-realworld-example-app-17)
 
 # おわりに
 
