--- a/articles/f3464f62c165c6.md
+++ b/articles/f3464f62c165c6.md
@@ -70,7 +70,7 @@ published_at: 2020-04-03
 
 僕の場合は任意継続保険制度を利用して、協会けんぽの健康保険を継続しました。
 
-<!--退職後の健康保険の選択肢や、それぞれどんなメリット・デメリットについてはこちらの記事で詳しく解説していますので、あわせてご参照ください。-->
+退職後の健康保険の選択肢や、それぞれどんなメリット・デメリットがあるかについては [こちらの記事]() で詳しく解説していますので、あわせてご参照ください。
 
 具体的には、協会けんぽの [都道府県支部](https://www.kyoukaikenpo.or.jp/g7/cat710/sb7130/sbb7131/1762-620/) 宛に以下の書類を郵送しました。
 
