fix: 🐛 some articles and map

--- a/articles/b9427be6dd188e.md
+++ b/articles/b9427be6dd188e.md
@@ -21,8 +21,7 @@ published_at: 2020-12-03
 
 僕自身まだまだAngular勉強中の身ですが、以前、自分なりに初学時につまずいたところを丁寧に解説しながら、それなりにリッチな（UIフレームワーク導入＆Firebase利用）アプリをゼロから作るチュートリアルを書きました。おかげさまでたくさんの方に読んでいただいています。
 
-* [Angular実践入門チュートリアル | blog.ttskch](https://blog.ttskch.com/angular-todo/)（ブログ版）
-* [Angular実践入門チュートリアル](https://zenn.dev/ttskch/books/84c7a272deb3845e8085)（Zenn版）（内容はまったく同じです）
+* [Angular実践入門チュートリアル](https://zenn.dev/ttskch/books/84c7a272deb3845e8085)
 
 今回はこの中で解説できていなかったRxJSに関する話を改めてまとめてみたいと思います💪
 
